--- a/DiamondStore/Pages/Index.cshtml
+++ b/DiamondStore/Pages/Index.cshtml
@@ -115,7 +115,7 @@
                             <div class="col-sm-3">
                                 <div class="feature_2im clearfix">
                                     <div class="feature_2im1 clearfix">
-                                        <a href="#"><img src="~/img/8.jpg" class="iw" alt="abc"></a>
+                                        <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6HxQW9EErLDWam718Yjy1dXO_N0OB669zyw&s" class="iw" alt="abc"></a>
                                     </div>
                                     <div class="feature_2im2 clearfix">
                                         <h6 class="mgt"><a class="bg_1" href="#">Featured</a></h6>
@@ -152,7 +152,7 @@
                             <div class="col-sm-3">
                                 <div class="feature_2im clearfix">
                                     <div class="feature_2im1 clearfix">
-                                        <a href="#"><img src="~/img/9.jpg" class="iw" alt="abc"></a>
+                                        <a href="#"><img src="https://cdn.pnj.io/images/thumbnails/300/300/detailed/210/sp-gbrbxmy000301-bong-tai-vang-18k-dinh-da-ruby-pnj-1.png" class="iw" alt="abc"></a>
                                     </div>
                                     <div class="feature_2im2 clearfix">
                                         <h6 class="mgt"><a class="bg_1" href="#">Featured</a></h6>
@@ -189,7 +189,7 @@
                             <div class="col-sm-3">
                                 <div class="feature_2im clearfix">
                                     <div class="feature_2im1 clearfix">
-                                        <a href="#"><img src="~/img/10.jpg" class="iw" alt="abc"></a>
+                                        <a href="#"><img src="https://cdn.pnj.io/images/thumbnails/300/300/detailed/204/sp-glxmxmy001012-lac-tay-vang-18k-dinh-da-ecz-pnj-1.png" class="iw" alt="abc"></a>
                                     </div>
                                     <div class="feature_2im2 clearfix">
                                         <h6 class="mgt"><a class="bg_1" href="#">Featured</a></h6>
@@ -226,7 +226,7 @@
                             <div class="col-sm-3">
                                 <div class="feature_2im clearfix">
                                     <div class="feature_2im1 clearfix">
-                                        <a href="#"><img src="~/img/11.jpg" class="iw" alt="abc"></a>
+                                        <a href="#"><img src="https://res.cloudinary.com/dkfag0frg/image/upload/v1721472138/u2plauwmb5ci5awic0wc.jpg" class="iw" alt="abc"></a>
                                     </div>
                                     <div class="feature_2im2 clearfix">
                                         <h6 class="mgt"><a class="bg_1" href="#">Featured</a></h6>
@@ -265,7 +265,7 @@
                             <div class="col-sm-3">
                                 <div class="feature_2im clearfix">
                                     <div class="feature_2im1 clearfix">
-                                        <a href="#"><img src="~/img/12.jpg" class="iw" alt="abc"></a>
+                                        <a href="#"><img src="https://res.cloudinary.com/dkfag0frg/image/upload/v1721472158/rsecqife0jgsd4gns3kv.jpg" class="iw" alt="abc"></a>
                                     </div>
                                     <div class="feature_2im2 clearfix">
                                         <h6 class="mgt"><a class="bg_1" href="#">Featured</a></h6>
@@ -302,7 +302,7 @@
                             <div class="col-sm-3">
                                 <div class="feature_2im clearfix">
                                     <div class="feature_2im1 clearfix">
-                                        <a href="#"><img src="~/img/13.jpg" class="iw" alt="abc"></a>
+                                        <a href="#"><img src="https://cdn.pnj.io/images/thumbnails/300/300/detailed/204/sp-glxmxmy001012-lac-tay-vang-18k-dinh-da-ecz-pnj-1.png" class="iw" alt="abc"></a>
                                     </div>
                                     <div class="feature_2im2 clearfix">
                                         <h6 class="mgt"><a class="bg_1" href="#">Featured</a></h6>
@@ -339,7 +339,7 @@
                             <div class="col-sm-3">
                                 <div class="feature_2im clearfix">
                                     <div class="feature_2im1 clearfix">
-                                        <a href="#"><img src="~/img/14.jpg" class="iw" alt="abc"></a>
+                                        <a href="#"><img src="https://cdn.pnj.io/images/thumbnails/300/300/detailed/210/sp-gbrbxmy000301-bong-tai-vang-18k-dinh-da-ruby-pnj-1.png" class="iw" alt="abc"></a>
                                     </div>
                                     <div class="feature_2im2 clearfix">
                                         <h6 class="mgt"><a class="bg_1" href="#">Featured</a></h6>
@@ -376,7 +376,7 @@
                             <div class="col-sm-3">
                                 <div class="feature_2im clearfix">
                                     <div class="feature_2im1 clearfix">
-                                        <a href="#"><img src="~/img/15.png" class="iw" alt="abc"></a>
+                                        <a href="#"><img src="https://res.cloudinary.com/dkfag0frg/image/upload/v1721471491/ae7ogcw1xegbjg1xxgij.jpg" class="iw" alt="abc"></a>
                                     </div>
                                     <div class="feature_2im2 clearfix">
                                         <h6 class="mgt"><a class="bg_1" href="#">Featured</a></h6>
