update UI client

--- a/DiamondStore/Pages/Shared/_Layout.cshtml
+++ b/DiamondStore/Pages/Shared/_Layout.cshtml
@@ -111,12 +111,11 @@
                                     <li><a href="/Jewelry">Jewelry</a></li>
                                 </ul>
                             </li>
-                            <li><a class="m_tag" href="/Blog">Blog</a></li>
+                            <li><a class="m_tag" href="/DiamondInfo">Diamond Info</a></li>
                             <li><a class="m_tag" href="/Contact">Contact</a></li>
                             <li class="dropdown">
                                 <a class="m_tag" href="#" data-toggle="dropdown" role="button" aria-expanded="false">Pages<span class="caret"></span></a>
                                 <ul class="dropdown-menu drop_3" role="menu">
-                                    <li><a href="/Services">Services</a></li>
                                     <li><a href="/Cart">Cart</a></li>
                                     <li><a class="border_none" href="/Checkout">Checkout</a></li>
                                 </ul>
