fix ui user management page

--- a/DiamondStore/Pages/Admin/_LayoutAdmin.cshtml
+++ b/DiamondStore/Pages/Admin/_LayoutAdmin.cshtml
@@ -301,8 +301,8 @@
     <script src="~/js/charts-pie.js"></script>
     <script src="~/js/focus-trap.js"></script>
     <script src="~/js/init-alpine.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    @* <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script> *@
 
     @RenderSection("Scripts", required: false)
 </body>
