add authorize access into page

--- a/DiamondStore/Pages/Index.cshtml
+++ b/DiamondStore/Pages/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 
-<section id="center" class="center_home">
+@* <section id="center" class="center_home">
     <div class="carousel fade-carousel slide" data-ride="carousel" data-interval="4000" id="bs-carousel">
         <!-- Overlay -->
         <div class="overlay"></div>
@@ -44,7 +44,7 @@
         </div>
     </div>
 </section>
-
+ *@
 <section id="list">
     <div class="container">
         <div class="row">
