--- a/DiamondStore/Pages/Admin/Users.cshtml
+++ b/DiamondStore/Pages/Admin/Users.cshtml
@@ -31,6 +31,10 @@
                                     @if (!string.IsNullOrEmpty(user.ImageUrl))
                                     {
                                         <img class="w-8 h-8 rounded-full" src="@user.ImageUrl" alt="User Image" />
+                                    } else
+                                    {
+                                        <img class="w-8 h-8 rounded-full" src="https://static.vecteezy.com/system/resources/previews/019/896/008/original/male-user-avatar-icon-in-flat-design-style-person-signs-illustration-png.png" alt="User Image" />
+
                                     }
                                 </td>
                                 <td class="px-4 py-3" style="text-align: center">@user.FullName</td>
