done authentication and user profie page

--- a/DiamondStore/Pages/Auth/ForgotPassword.cshtml
+++ b/DiamondStore/Pages/Auth/ForgotPassword.cshtml
@@ -25,7 +25,7 @@
                 }
             </div>
         }
-        <div class="wrapper" style="margin: 10px auto">
+        <div class="wrapper" style="margin: 100px auto 200px">
             <div class="form-container">
                 <div class="form-inner">
                     <form method="post">
