--- a/DiamondStore/Pages/Auth/Login.cshtml
+++ b/DiamondStore/Pages/Auth/Login.cshtml
@@ -32,7 +32,7 @@
 
         
     }
-    <div class="wrapper" style="margin: 10px auto">
+    <div class="wrapper" style="margin: 30px auto 100px">
         <div class="title-text">
             <div class="title login">Login</div>
         </div>
