--- a/DiamondStore/Pages/Auth/ResetPassword.cshtml
+++ b/DiamondStore/Pages/Auth/ResetPassword.cshtml
@@ -10,7 +10,7 @@
         <div class="alert alert-success" style="width: 40%; margin: 0 auto; text-align: center;">
             <p>@Model.Message</p>
         </div>
-        <div class="wrapper" style="margin: 10px auto">
+        <div class="wrapper" style="margin: 30px auto 200px">
             <div class="form-container">
                 <div class="form-inner">
                     <div class="signup-link"><a href="/Login">Sign In</a></div>
