--- a/DiamondStore/Pages/Auth/Register.cshtml
+++ b/DiamondStore/Pages/Auth/Register.cshtml
@@ -23,7 +23,7 @@
             }
         </div>
     }
-    <div class="wrapper" style="margin: 10px auto;">
+    <div class="wrapper" style="margin: 30px auto 100px;">
         <div class="title-text">
             <div class="title signup">Sign Up</div>
         </div>
